# kafka_oracle

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  start_colima.sh
docker/: Dockerfile  docker-compose copy.yaml  docker-compose.connect.yaml  docker-compose.kafka.yaml  docker-compose.oracle.yaml  docker-compose.test.yaml  docker-compose.ui.yaml  docker-compose.yaml  docker.env
ko/: app.py  code.py  config.py  db.py  model.py  transform.py
scripts/: create_person.sql  create_table.sql  create_user.sql  register_oracle.json  register_oracle.sh  setup_db.sh  setup_debezium.sql  validate_oracle.sh
tests/: conftest.py  test_code.py  test_kafka.py  test_oracle.py
tests/integration/: test_oracle.py
tests/unit/: test_kafka.py  test_transform.py
